# Roxy_AI_Assistant

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
config/: default.yaml  mcp_servers.yaml  privacy.yaml
docs/: architecture.md  brain-architect-plan.md  mcp-implementation-plan.md  memory-builder-plan.md  performance.md  privacy-model.md  skills-guide.md
scripts/: install.sh  setup_ollama.sh  setup_searxng.sh  uninstall.sh  verify_installation.py
src/roxy/: config.py  main.py
src/roxy/brain/: __init__.py  factory.py  llm_clients.py  orchestrator.py  privacy.py  protocols.py  rate_limiter.py  router.py  tool_adapter.py
src/roxy/macos/: __init__.py  applescript.py  hammerspoon.py  menubar.py  path_validation.py  pyobjc_bridge.py  spotlight.py
src/roxy/mcp/: __init__.py  server_config.py  server_health.py  server_manager.py  servers.py
src/roxy/mcp/custom/: __init__.py  roxy_system.py
src/roxy/memory/: __init__.py  history.py  longterm.py  manager.py  session.py
src/roxy/skills/: __init__.py  base.py  permissions.py  registry.py
src/roxy/skills/dev/: __init__.py  claude_code.py  git_ops.py  project_manager.py
src/roxy/skills/productivity/: __init__.py  calendar.py  email.py  notes.py  reminders.py
src/roxy/skills/system/: __init__.py  app_launcher.py  clipboard.py  file_search.py  shortcuts.py  system_info.py  window_manager.py
src/roxy/skills/web/: __init__.py  browse.py  flights.py  search.py
src/roxy/voice/: __init__.py  pipeline.py  stt.py  talon_bridge.py  tts.py  wake_word.py
talon/: apps.talon  dev.talon  roxy.talon  roxy_talon.py  system.talon
tests/: conftest.py
tests/benchmarks/: __init__.py  test_performance.py
tests/integration/: test_function_calling.py  test_orchestrator_flow.py  test_privacy_gateway.py  test_skill_registration.py  test_voice_pipeline.py  test_web_skills.py
tests/security/: __init__.py  test_applescript_injection.py  test_security.py  test_tool_adapter_security.py
tests/unit/: test_applescript.py  test_browse_skill.py  test_calendar.py  test_claude_code_skill.py  test_config.py  test_email_skill.py  test_flights.py  test_git_ops.py  test_history.py  test_llm_clients.py  test_longterm.py  test_manager.py  test_mcp_manager.py  test_notes_skill.py  test_orchestrator_di.py  test_path_validation.py  test_pipeline.py  test_privacy.py  test_privacy_enhanced.py  test_project_manager_skill.py  test_reminders_skill.py  test_router.py  test_session_memory.py  test_shortcuts_skill.py  test_skills_registry.py  test_spotlight.py  test_stt.py  test_system_skills.py  test_talon_bridge.py  test_tool_adapter.py  test_tts.py  test_wake_word.py  test_web_search.py
