[project]
name = "roxy"
version = "0.1.0"
description = "Roxy — Local-first, voice-controlled AI assistant for macOS"
# readme = "README.md"  # Create README.md later
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
authors = [
    { name = "Anthony Foran" }
]

dependencies = [
    # Agent Framework
    "agno>=1.0.0,<2.0.0",

    # LLM Clients
    "openai>=1.50.0,<2.0.0",              # OpenAI-compatible client (used for Ollama + Z.ai)
    "httpx>=0.27.0,<1.0.0",               # Async HTTP client

    # Memory & Vector
    "mem0ai>=0.1.0,<1.0.0",               # Persistent memory layer
    "chromadb>=0.5.0,<1.0.0",             # Vector database
    "sqlite-vec>=0.1.0,<1.0.0",           # SQLite vector extension

    # RAG
    "llama-index>=0.11.0,<1.0.0",         # Document ingestion + retrieval

    # Voice - STT
    "faster-whisper>=1.0.0,<2.0.0",       # Local speech-to-text
    "pvporcupine>=3.0.0,<4.0.0",          # Wake word detection (Python 3.11+ compatible)
    "sounddevice>=0.4.7,<1.0.0",          # Audio I/O for recording/playback
    "numpy>=1.26.0,<2.0.0",               # Audio array processing

    # Voice - TTS
    "mlx-audio>=0.1.0,<1.0.0",            # Kokoro TTS on Apple Silicon

    # Web & Browser
    "browser-use>=0.2.0,<1.0.0",          # AI browser automation
    "playwright>=1.45.0,<2.0.0",          # Browser engine

    # MCP
    "mcp>=1.0.0,<2.0.0",                  # Model Context Protocol SDK

    # macOS Integration
    "pyobjc>=12.0,<13.0",                # Python-Objective-C bridge
    "rumps>=0.4.0,<1.0.0",                # macOS menu bar app

    # Configuration
    "pyyaml>=6.0,<7.0",                 # YAML config files
    "pydantic>=2.7.0,<3.0.0",             # Settings validation
    "pydantic-settings>=2.3.0,<3.0.0",    # .env loading
    "python-dotenv>=1.0.0,<2.0.0",        # .env file support

    # Utilities
    "rich>=13.7.0,<14.0.0",                # Terminal output formatting
    "click>=8.1.0,<9.0.0",                # CLI framework
    "keyring>=25.0.0,<26.0.0",            # macOS Keychain integration for secrets
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.5.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "bandit>=1.7.0,<2.0.0",
]
voice-wake = [
    "openwakeword>=0.6.0",         # Wake word detection - requires Python <=3.11
]

[project.scripts]
roxy = "roxy.main:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A"]  # Removed "SIM" for simplify suggestions
ignore = [
    "ANN101", "ANN102", "E501",  # self/cls annotations, long lines
    "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN401",  # Type annotations
    "F401", "F841", "UP042",  # Unused imports/variables
    "B904", "B007", "B017", "B027",  # Exception chaining, unused vars, assert style
    "W293", "E402", "N806", "N817",  # Whitespace, import location, naming
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pylint>=4.0.4",
]
